--- a/ssd/ssdd.config
+++ b/ssd/ssdd.config
@@ -16,6 +16,12 @@ train {
     num_epochs: 500;
 }
 
+eval {
+    log_dir: "../log/ssd";
+    ckpt_dir: "../ckpt/ssd";
+    batch_size: 1;
+}
+
 anchor_list {
     min_scale: 0.2;
     max_scale: 0.9;
