--- a/ssd/ssdd.config
+++ b/ssd/ssdd.config
@@ -1,13 +1,13 @@
-type: "SSD_ALEX";
-name: "ssd_alex";
+type: "SSD_MOBILE";
+name: "ssd_mobile";
 num_classes: 3;
-npy_path: "../npy/alexnet.npy";
+# npy_path: "../npy/alexnet.npy";
 
 
 train {
-    log_dir: "../log/ssd";
-    ckpt_dir: "../ckpt/ssd";
-    batch_size: 4;
+    log_dir: "../log/ssd_mobile";
+    ckpt_dir: "../ckpt/ssd_mobile";
+    batch_size: 8;
     num_epochs: 500;
     image {
         height: 300;
@@ -17,8 +17,8 @@ train {
 }
 
 eval {
-    log_dir: "../log/ssd";
-    ckpt_dir: "../ckpt/ssd";
+    log_dir: "../log/ssd_mobile";
+    ckpt_dir: "../ckpt/ssd_mobile";
     batch_size: 1;
 }
 
@@ -26,13 +26,29 @@ anchor_list {
     min_scale: 0.2;
     max_scale: 0.9;
     anchor: {
+        src: "Pointwise_Conv2d_11";
+        aspect_ratio: 1;
+        aspect_ratio: 0.5;
+        aspect_ratio: 2;
+    }
+    anchor: {
+        src: "Pointwise_Conv2d_13";
+        aspect_ratio: 1;
+        aspect_ratio: 0.5;
+        aspect_ratio: 2;
+        aspect_ratio: 0.333;
+        aspect_ratio: 3;
+    }
+    anchor: {
         src: "conv2";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
+        aspect_ratio: 0.333;
+        aspect_ratio: 3;
     }
     anchor: {
-        src: "fc7";
+        src: "conv4";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
@@ -40,29 +56,13 @@ anchor_list {
         aspect_ratio: 3;
     }
     anchor: {
-        src: "conv8_2";
-        aspect_ratio: 1;
-        aspect_ratio: 0.5;
-        aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
-    }
-    anchor: {
-        src: "conv9_2";
-        aspect_ratio: 1;
-        aspect_ratio: 0.5;
-        aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
-    }
-    anchor: {
-        src: "conv10_2";
+        src: "conv6";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
     }
     anchor: {
-        src: "conv11_2";
+        src: "conv8";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
