--- a/ssd/ssd_mobile.config
+++ b/ssd/ssd_mobile.config
@@ -1,7 +1,7 @@
 type: "SSD_MOBILE";
 name: "ssd_mobile";
 num_classes: 3;
-# npy_path: "../npy/alexnet.npy";
+npy_path: "../npy/ssd_mobile.npy";
 
 
 train {
@@ -20,6 +20,12 @@ eval {
     log_dir: "../log/ssd_mobile";
     ckpt_dir: "../ckpt/ssd_mobile";
     batch_size: 1;
+    num_epochs: 1;
+    image {
+        height: 300;
+        width: 300;
+        path: "../ssd/*.tfrecords";
+    }
 }
 
 anchor_list {
@@ -60,11 +66,15 @@ anchor_list {
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
+        aspect_ratio: 0.333;
+        aspect_ratio: 3;
     }
     anchor: {
         src: "conv8";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
+        aspect_ratio: 0.333;
+        aspect_ratio: 3;
     }
 }
