--- a/ssd/ssd_alex.config
+++ b/ssd/ssd_alex.config
@@ -1,30 +1,31 @@
 type: "SSD_ALEX";
 name: "ssd_alex";
-num_classes: 3;
+num_classes: 1;
 npy_path: "../npy/alexnet.npy";
 
 
 train {
     log_dir: "../log/ssd_alex";
     ckpt_dir: "../ckpt/ssd_alex";
-    batch_size: 8;
+    batch_size: 12;
+    weight_decay: 0.00004;
     num_epochs: 500;
     image {
         height: 300;
         width: 300;
-        path: "../ssd/*.tfrecords";
+        path: "../ssd/toy-train.tfrecords";
     }
 }
 
 eval {
-    log_dir: "../log/ssd";
-    ckpt_dir: "../ckpt/ssd";
+    log_dir: "../log/ssd_alex";
+    ckpt_dir: "../ckpt/ssd_alex";
     batch_size: 1;
     num_epochs: 1;
     image {
         height: 300;
         width: 300;
-        path: "../ssd/*.tfrecords";
+        path: "../ssd/toy-test.tfrecords";
     }
 }
 
@@ -42,24 +43,18 @@ anchor_list {
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv8_2";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv9_2";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv10_2";
