--- a/ssd/ssd_alex.config
+++ b/ssd/ssd_alex.config
@@ -5,35 +5,35 @@ npy_path: "../npy/alexnet.npy";
 
 
 train {
-    log_dir: "../log/ssd_alex";
-    ckpt_dir: "../ckpt/ssd_alex";
-    batch_size: 12;
-    weight_decay: 0.00004;
-    num_epochs: 500;
+    log_dir: "../log/ssd_alex400";
+    ckpt_dir: "../ckpt/ssd_alex400";
+    batch_size: 8;
+    weight_decay: 0.0004;
+    num_epochs: 1000;
     image {
-        height: 300;
-        width: 300;
+        height: 400;
+        width: 400;
         path: "../ssd/toy-train.tfrecords";
     }
 }
 
 eval {
-    log_dir: "../log/ssd_alex";
-    ckpt_dir: "../ckpt/ssd_alex";
+    log_dir: "../log/ssd_alex400";
+    ckpt_dir: "../ckpt/ssd_alex400";
     batch_size: 1;
     num_epochs: 1;
     image {
-        height: 300;
-        width: 300;
+        height: 400;
+        width: 400;
         path: "../ssd/toy-test.tfrecords";
     }
 }
 
 anchor_list {
-    min_scale: 0.2;
-    max_scale: 0.9;
+    min_scale: 0.15;
+    max_scale: 0.8;
     anchor: {
-        src: "conv2";
+        src: "conv5";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
