--- a/ssd/ssd_alex.config
+++ b/ssd/ssd_alex.config
@@ -5,8 +5,8 @@ npy_path: "../npy/alexnet.npy";
 
 
 train {
-    log_dir: "../log/ssd_alex400";
-    ckpt_dir: "../ckpt/ssd_alex400";
+    log_dir: "../log/ssd_alex400_small";
+    ckpt_dir: "../ckpt/ssd_alex400_small";
     batch_size: 8;
     weight_decay: 0.0004;
     num_epochs: 1000;
@@ -18,8 +18,8 @@ train {
 }
 
 eval {
-    log_dir: "../log/ssd_alex400";
-    ckpt_dir: "../ckpt/ssd_alex400";
+    log_dir: "../log/ssd_alex400_small";
+    ckpt_dir: "../ckpt/ssd_alex400_small";
     batch_size: 1;
     num_epochs: 1;
     image {
@@ -30,8 +30,9 @@ eval {
 }
 
 anchor_list {
-    min_scale: 0.15;
+    min_scale: 0.07;
     max_scale: 0.8;
+    method: "linear"
     anchor: {
         src: "conv5";
         aspect_ratio: 1;
