--- a/ssd/ssd_mobile.config
+++ b/ssd/ssd_mobile.config
@@ -1,6 +1,6 @@
 type: "SSD_MOBILE";
 name: "ssd_mobile";
-num_classes: 3;
+num_classes: 1;
 npy_path: "../npy/ssd_mobile.npy";
 
 
@@ -8,11 +8,12 @@ train {
     log_dir: "../log/ssd_mobile";
     ckpt_dir: "../ckpt/ssd_mobile";
     batch_size: 8;
-    num_epochs: 500;
+    weight_decay: 0.0004;
+    num_epochs: 1000;
     image {
         height: 300;
         width: 300;
-        path: "../ssd/*.tfrecords";
+        path: "../ssd/toy-train.tfrecords";
     }
 }
 
@@ -24,13 +25,20 @@ eval {
     image {
         height: 300;
         width: 300;
-        path: "../ssd/*.tfrecords";
+        path: "../ssd/toy-test.tfrecords";
     }
 }
 
 anchor_list {
-    min_scale: 0.2;
-    max_scale: 0.9;
+    min_scale: 0.07;
+    max_scale: 0.8;
+    method: "linear"
+    anchor: {
+        src: "Pointwise_Conv2d_9";
+        aspect_ratio: 1;
+        aspect_ratio: 0.5;
+        aspect_ratio: 2;
+    }
     anchor: {
         src: "Pointwise_Conv2d_11";
         aspect_ratio: 1;
@@ -42,39 +50,29 @@ anchor_list {
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv2";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv4";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv6";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
     anchor: {
         src: "conv8";
         aspect_ratio: 1;
         aspect_ratio: 0.5;
         aspect_ratio: 2;
-        aspect_ratio: 0.333;
-        aspect_ratio: 3;
     }
 }
